--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.7.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "autoprefixer": "^10.4.0",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.0",
     "next": "12.0.7",
+    "postcss": "^8.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
+    "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
