--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.1",
     "firebase-admin": "^10.0.0",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "postcss": "^8.4.4",
     "react": "17.0.2",
     "react-currency-formatter": "^1.1.0",
